--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -13,3 +13,7 @@ body div#wall #tag-3.slick {
 body #wall #tag-4 {
   display: none;
 }
+
+body div#wall .parent #tag-5.slick {
+  display: none;
+}
